IDP-1758 - Allow suppression of AuthenticatingAuthority elements
https://issues.shibboleth.net/jira/browse/IDP-1758